# pydantic-schemaforms

./: .gitignore  .mike.yml  .pre-commit-config.yaml  .tmp_er_orig.py  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  ENHANCED_README.md  IMPLEMENTATION_SUMMARY.md  NESTED_FORMS_EXAMPLE.md  README.md  bumpcalver-history.json  changelog.md  compare_schemas.py  contribute.md  coverage-ci.xml  coverage.xml  debug_form.html  debug_full_render.py  debug_model_list.html  debug_renderer.py  debug_schema.py  demo_modern.py  design_idea.py  example.py  latest  live_validation_demo.py  makefile  minimal.py  mkdocs.yml  page.html  pydantic_example.py  pyproject.toml  report.xml  requirements.txt  run_examples.sh  sample_form.html  simple_example.py  sonar-project.properties  stable  (+8 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  release-drafter.yml
26.1.1.beta/: 404.html  index.html  sitemap.xml
26.1.2.beta/: 404.html  index.html
26.1.6.beta/: 404.html  index.html
docs/: about.md  assets.md  configuration.md  contribute.md  design_idea.py  index.md  inputs.md  layouts.md  library-boundary-risk-analysis.md  logging.md  plugin_hooks.md  pydantic-form.docx  quickstart.md  release-notes.md  review.md  testing_workflow.md  timing.md  tutorial.md  tutorial_fastapi.md  validation_guide.md
examples/: DEVCONTAINER_READY.md  EXAMPLES_README.md  FASTAPI_IMPLEMENTATION.md  FORM_FIX_SUMMARY.md  FRAMEWORK_EXAMPLES.md  README.md  RESOLUTION_SUMMARY.md  SIMPLE_IS_BETTER_COMPLETE.md  UNIFIED_DEMO_README.md  comprehensive_flask_demo.py  demo_timing_feature.py  example_two.py  fastapi_demo.py  fastapi_example.py  flask_example.py  flask_examples.py  form_model_demo.py  logging_control_example.py  logging_example.py  main.py  nested_forms_example.py  pydantic_example.py  pydantic_kitchen_sink.py  shared_models.py  simple_flask_demo.py  simple_is_better_demo.py  start_fastapi.sh  test_icons.html  test_icons.py  test_model_consistency.py  test_self_contained.html  test_simplicity.py  test_user_example.py  timing_options_example.py  unified_demo.py
pydantic_forms/: __init__.py  enhanced_renderer.py  form_field.py  form_layout.py  form_layouts.py  form_renderer.py  icon_mapping.py  input_types.py  integration.py  layout_base.py  layouts.py  live_validation.py  material_renderer.py  model_list.py  modern_renderer.py  py314_renderer.py  render_form.py  schema_form.py  simple_material_renderer.py  templates.py  ui_elements.py  validation.py  vendor_assets.py  version_check.py
pydantic_schemaforms/: __init__.py  enhanced_renderer.py  form_data.py  form_field.py  form_layouts.py  html_markers.py  model_list.py  render_form.py  schema_form.py  simple_material_renderer.py  templates.py  validation.py
scripts/: changelog.py  deploy_docs.py  generate_release_notes.py  update_docs.py  vendor_assets.py
tests/: conftest.py  debug_form.html  test_asset_mode_pattern.py  test_coverage_target_modules_boost.py  test_coverage_targeted_modules.py  test_datetime_inputs_coverage_boost.py  test_debug_mode.py  test_deep_nested_validation.py  test_e2e_layouts_async.py  test_enhanced_renderer.py  test_error_extraction.py  test_fastapi_example_smoke.py  test_fastapi_forms_matrix.py  test_fastapi_layouts_post_validation.py  test_field_renderer_coverage.py  test_field_renderer_coverage_boost.py  test_form_data_parsing.py  test_form_layouts_advanced.py  test_form_layouts_coverage.py  test_form_layouts_extended.py  test_form_rendering.py  test_html_markers.py  test_input_coverage_boost.py  test_input_types_coverage.py  test_inputs.py  test_integration.py  test_integration_builder.py  test_integration_workflow.py  test_layout_demo_smoke.py  (+31 more)
(+185 files in other folders)
